--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
+    "import random\n",
+    "\n"
    ]
   },
   {
@@ -38,11 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[83, 17, 11, 66, 84, 100, 89, 59, 16, 85, 93, 0, 62, 63, 39, 99, 81, 82, 65, 50, 64, 52, 87, 45, 77, 53, 10, 9, 41, 25, 88, 34, 95, 96, 67, 75, 1, 97, 71, 72, 13, 69, 33, 57, 94, 49, 40, 76, 27, 18, 8, 5, 23, 29, 91, 19, 92, 51, 78, 31, 32, 36, 43, 90, 30, 38, 4, 2, 46, 56, 79, 24, 70, 21, 60, 26, 6, 58, 20, 35]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_1 = random.sample(range(0, 101), 80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 4, 5, 6, 7, 8, 10, 11, 12, 13, 15, 16, 19, 20, 21, 22, 23, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 51, 52, 53, 54, 55, 57, 58, 59, 60, 62, 63, 64, 65, 67, 68, 69, 71, 72, 73, 74, 75, 76, 77, 79, 80, 83, 85, 86, 87, 88, 89, 90, 91, 92, 93, 95, 96, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1= set(sample_list_1)\n",
+    "print(set1)"
    ]
   },
   {
@@ -77,11 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[90, 31, 30, 77, 97, 47, 32, 20, 62, 57, 94, 3, 2, 15, 74, 83, 21, 22, 10, 9, 24, 49, 44, 50, 51, 48, 60, 98, 71, 4, 34, 70, 5, 27, 23, 52, 76, 80, 69, 12, 43, 45, 87, 13, 64, 19, 46, 100, 63, 67, 81, 16, 75, 86, 7, 55, 99, 37, 40, 38, 65, 1, 66, 68, 91, 17, 59, 28, 79, 73, 53, 29, 25, 39, 0, 14, 84, 18, 89, 95]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "for e in random.sample(range(0, 101), 80):\n",
+    "        sample_list_2.append(e)\n",
+    "\n",
+    "print(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +126,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2= set(sample_list_2)"
    ]
   },
   {
@@ -109,11 +143,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{96, 33, 35, 36, 58, 6, 8, 41, 42, 11, 72, 85, 54, 88, 26, 92, 93}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{97, 34, 3, 66, 38, 70, 9, 45, 14, 17, 18, 50, 81, 84, 24, 27, 94}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2.difference(set1)\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 4, 5, 7, 10, 12, 13, 15, 16, 19, 20, 21, 22, 23, 25, 28, 29, 30, 31, 32, 37, 39, 40, 43, 44, 46, 47, 48, 49, 51, 52, 53, 55, 57, 59, 60, 62, 63, 64, 65, 67, 68, 69, 71, 73, 74, 75, 76, 77, 79, 80, 83, 86, 87, 89, 90, 91, 95, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +229,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "80\n",
+      "17\n",
+      "17\n",
+      "63\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "a=len(set1)\n",
+    "b=len(set2)\n",
+    "c=len(set3)\n",
+    "d=len(set4)\n",
+    "e=len(set5)\n",
+    "\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)\n",
+    "print(e)\n",
+    "\n",
+    "#esto es es una movida. hay que darle tiempo \n",
+    "#a = \n",
+    "\n"
    ]
   },
   {
@@ -181,11 +271,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()\n",
+    "print(type(set6))"
    ]
   },
   {
@@ -197,11 +297,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 4, 5, 6, 7, 8, 10, 11, 12, 13, 15, 16, 19, 20, 21, 22, 23, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 51, 52, 53, 54, 55, 57, 58, 59, 60, 62, 63, 64, 65, 67, 68, 69, 71, 72, 73, 74, 75, 76, 77, 79, 80, 83, 85, 86, 87, 88, 89, 90, 91, 92, 93, 95, 96, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "#set6.update(set, set5)\n",
+    "\n",
+    "print(set6)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -213,11 +328,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "if set1 == set6:\n",
+    "    print(\"true\")\n",
+    "    "
    ]
   },
   {
@@ -229,11 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(set1.issubset(set2))\n",
+    "print(set1.issubset(set3))"
    ]
   },
   {
@@ -247,11 +385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{96, 33, 35, 36, 58, 6, 8, 41, 42, 11, 72, 85, 54, 88, 26, 92, 93}\n",
+      "{96, 33, 35, 36, 58, 6, 8, 41, 42, 11, 72, 85, 54, 88, 26, 92, 93}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3.union(set4, set5)\n",
+    "print(set3)\n",
+    "\n",
+    "set3.union(set1, set2)\n",
+    "\n",
+    "print(set3)\n"
    ]
   },
   {
@@ -263,11 +416,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1.pop())\n"
    ]
   },
   {
@@ -283,12 +445,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "79\n",
+      "{2, 4, 5, 6, 7, 8, 10, 12, 13, 15, 16, 20, 22, 23, 25, 26, 28, 30, 32, 33, 35, 36, 37, 40, 42, 43, 44, 46, 47, 48, 52, 53, 54, 55, 57, 58, 60, 62, 63, 64, 65, 67, 68, 72, 73, 74, 75, 76, 77, 80, 83, 85, 86, 87, 88, 90, 92, 93, 95, 96, 98, 100}\n",
+      "62\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "print(len(list_to_remove))\n",
+    "print(len(set1))\n",
+    "remove = set(list_to_remove)\n",
+    "prueba = set1.difference(remove)\n",
+    "print(prueba)\n",
+    "print(len(prueba))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
