--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[49, 89, 3, 100, 90, 36, 84, 29, 62, 28, 42, 6, 55, 94, 41, 15, 87, 40, 82, 4, 35, 17, 92, 26, 46, 76, 9, 22, 72, 66, 7, 88, 93, 44, 39, 97, 61, 21, 79, 75, 99, 19, 45, 31, 24, 32, 16, 74, 12, 50, 23, 56, 65, 37, 67, 91, 73, 25, 2, 5, 33, 60, 59, 95, 38, 96, 52, 43, 18, 98, 63, 54, 58, 34, 11, 70, 53, 13, 20, 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(set(range(101)), 80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +66,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 6, 7, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 49, 50, 52, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 65, 66, 67, 70, 72, 73, 74, 75, 76, 79, 82, 84, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "print(set1)\n",
+    "len(set1)"
    ]
   },
   {
@@ -77,11 +110,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 94, 69, 86, 66, 18, 15, 60, 95, 30, 44, 77, 63, 62, 33, 83, 88, 80, 50, 13, 59, 0, 48, 58, 82, 40, 51, 38, 46, 11, 26, 27, 34, 29, 73, 56, 81, 1, 35, 5, 75, 67, 85, 9, 55, 79, 54, 22, 61, 45, 89, 4, 2, 91, 37, 3, 53, 98, 71, 41, 57, 78, 17, 42, 28, 90, 14, 72, 76, 8, 6, 19, 97, 68, 31, 74, 24, 36, 100, 39]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in random.sample(range(101), 80):\n",
+    "    sample_list_2.append(i)\n",
+    "print(sample_list_2)    "
    ]
   },
   {
@@ -93,11 +139,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 8, 9, 11, 13, 14, 15, 17, 18, 19, 22, 23, 24, 26, 27, 28, 29, 30, 31, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 46, 48, 50, 51, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 66, 67, 68, 69, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 85, 86, 88, 89, 90, 91, 94, 95, 97, 98, 100}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(set2)\n",
+    "len(set2)\n"
    ]
   },
   {
@@ -109,11 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{32, 65, 96, 99, 70, 7, 10, 43, 12, 16, 49, 20, 21, 52, 84, 87, 25, 92, 93}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)\n",
+    "\n",
+    "#Recuerda que .difference se encarga de restar los elementos del () al de delante del punto"
    ]
   },
   {
@@ -125,11 +204,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 68, 69, 71, 8, 77, 14, 78, 48, 80, 81, 51, 83, 85, 86, 57, 27, 30}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set4 = set2.difference(set1)\n",
+    "print(set4)\n"
    ]
   },
   {
@@ -141,11 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 6, 9, 11, 13, 15, 17, 18, 19, 22, 23, 24, 26, 28, 29, 31, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 46, 50, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 66, 67, 72, 73, 74, 75, 76, 79, 82, 88, 89, 90, 91, 94, 95, 97, 98, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -169,7 +270,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "\n",
+    "    len(set1)\n",
+    "    len(set2)\n",
+    "    len(set3)\n",
+    "    len(set4)\n",
+    "    len(set5)\n",
+    "\n",
+    "    \n",
+    "#incluir nota \n",
+    "#AUB = A+B - AnB"
    ]
   },
   {
@@ -181,11 +293,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "\n",
+    "set6 = set()\n",
+    "type(set6)"
    ]
   },
   {
@@ -197,11 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 6, 7, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 49, 50, 52, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 65, 66, 67, 70, 72, 73, 74, 75, 76, 79, 82, 84, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "#updete unde unos sets con otros\n",
+    "\n",
+    "set6.update(set5, set3)\n",
+    "print(set6)\n"
    ]
   },
   {
@@ -213,11 +353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "if set1 == set6:\n",
+    "    print(\"True\")"
    ]
   },
   {
@@ -229,11 +380,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(set1.issubset(set2))\n",
+    "print(set1.issubset(set3))"
    ]
   },
   {
@@ -247,11 +410,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{32, 65, 96, 99, 70, 7, 10, 43, 12, 16, 49, 20, 21, 52, 84, 87, 25, 92, 93}\n",
+      "{32, 65, 96, 99, 70, 7, 10, 43, 12, 16, 49, 20, 21, 52, 84, 87, 25, 92, 93}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set3.union(set4, set5)\n",
+    "print(set3)\n",
+    "set3.union(set1, set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -263,17 +440,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "74"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(set1.pop())\n",
+    "print(set1.pop())\n",
+    "len(set1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "#### Remove every element in the following list from `set1` if they are present in the set. Print the remaining elements.\n",
     "\n",
     "```\n",
@@ -283,12 +484,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "20\n",
+      "{2, 3, 4, 5, 6, 7, 10, 12, 13, 15, 16, 17, 18, 20, 22, 23, 24, 25, 26, 28, 32, 33, 34, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 50, 52, 53, 54, 55, 56, 58, 60, 62, 63, 65, 66, 67, 70, 72, 73, 74, 75, 76, 82, 84, 87, 88, 90, 92, 93, 94, 95, 96, 97, 98, 100}\n",
+      "65\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "#He vuelto a ejecutar la celda del set1 para tener 80 elementos\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "print(len(set1))\n",
+    "print(len(list_to_remove))\n",
+    "\n",
+    "rem = set(list_to_remove)\n",
+    "\n",
+    "set_f = set1.difference(rem)\n",
+    "print(set_f)\n",
+    "print(len(set_f))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
