--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup = [(\"I\",)]"
    ]
   },
   {
@@ -33,11 +33,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('I',)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(tup)\n",
+    "type( (\"I\",))"
    ]
   },
   {
@@ -55,13 +74,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-af4397f085e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"o\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"h\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"a\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"k\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitems\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mtup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "tup = (\"I\",)\n",
+    "items = [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "for x in items: \n",
+    "    tup.append(x)\n",
+    "print(tup)\n",
     "\n",
-    "# Your explanation here\n"
+    "\n",
+    "# I cannot append elements to the tuple as tuples are immutable. \n",
+    "# The only way would be to make the tuple a list, then append the list and convert it back into a tuple.\n"
    ]
   },
   {
@@ -79,13 +116,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "tup = (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "print (type(tup))\n",
     "\n",
-    "# Your explanation here\n"
+    "\n",
+    "# Your explanation here\n",
+    "# I am able to do the reassigment as I am fully changing the Tuple values, not appending the tuple\n"
    ]
   },
   {
@@ -103,11 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup1: ('I', 'r', 'o', 'n') tup2: ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup = (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "tup1 = (tup[:4])\n",
+    "tup2 = (tup[-4:])\n",
+    "print(\"tup1:\", tup1, \"tup2:\", tup2)\n",
+    "\n"
    ]
   },
   {
@@ -121,11 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup3: ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1= ('I', 'r', 'o', 'n')\n",
+    "tup2= ('h', 'a', 'c', 'k')\n",
+    "tup3= tup1 + tup2 \n",
+    "print(\"tup3:\",tup3)"
    ]
   },
   {
@@ -137,11 +211,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count tup1: 4\n",
+      "Count tup2: 4\n",
+      "Count tup3: 8\n",
+      "Count1 + Count 2: 8\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1 = ('I', 'r', 'o', 'n')\n",
+    "tup2 = ('h', 'a', 'c', 'k')\n",
+    "tup3 = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "print (\"Count tup1:\", len(tup1))\n",
+    "print (\"Count tup2:\", len(tup2))\n",
+    "print (\"Count tup3:\", len(tup3))\n",
+    "print (\"Count1 + Count 2:\", len(tup1) + len(tup2))"
    ]
   },
   {
@@ -153,11 +245,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The index of h: 4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3 = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "index = tup3.index('h')\n",
+    "print('The index of h:', index)"
    ]
   },
   {
@@ -177,11 +280,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is present in tup3\n",
+      "b is not present in tup3\n",
+      "c is present in tup3\n",
+      "d is not present in tup3\n",
+      "e is not present in tup3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3 = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "number = []\n",
+    "\n",
+    "for i in range(len(letters)):\n",
+    "    if letters[i] in tup3:\n",
+    "        print(\"{} is present in tup3\".format(letters[i]))\n",
+    "        number.append(tup3.count(letters[i]))\n",
+    "    else:\n",
+    "        print(\"{} is not present in tup3\".format(letters[i]))\n",
+    "        number.append(tup3.count(letters[i]))\n"
    ]
   },
   {
@@ -195,12 +321,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a has 1 ocurrence in tup3\n",
+      "b has 0 ocurrence in tup3\n",
+      "c has 1 ocurrence in tup3\n",
+      "d has 0 ocurrence in tup3\n",
+      "e has 0 ocurrence in tup3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "tup3 = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for i in range(len(letters)):\n",
+    "    print(\"{} has {} ocurrence in tup3\".format(letters[i], number[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
