No relevant changes

--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Print the type of `tup`. \n",
+    "### Print the type of `tup`. \n",
     "\n",
     "Make sure its type is correct (i.e. *tuple* instead of *str*)."
    ]
