--- a/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 8, 'about': 1, 'all': 1, 'although': 3, 'and': 23, 'are': 1, 'at': 1, 'baby': 14, 'backseat': 1, 'bag': 1, 'bar': 1, 'be': 16, 'bedsheets': 3, 'begin': 1, 'best': 1, 'body': 17, 'boy': 2, 'brand': 6, 'can': 1, 'chance': 1, 'club': 1, 'come': 37, 'conversation': 1, 'crazy': 2, 'dance': 1, 'date': 1, 'day': 6, 'discovering': 6, 'do': 3, 'doing': 2, \"don't\": 2, 'drinking': 1, 'driver': 1, 'eat': 1, 'every': 6, 'falling': 3, 'family': 1, 'fast': 1, 'fill': 2, 'find': 1, 'first': 1, 'follow': 6, 'for': 3, 'friends': 1, 'get': 1, 'girl': 2, 'give': 1, 'go': 2, 'going': 1, 'grab': 2, 'hand': 1, 'handmade': 2, 'heart': 3, 'hours': 2, 'how': 1, 'i': 6, \"i'll\": 1, \"i'm\": 23, 'in': 27, 'is': 5, \"isn't\": 1, 'it': 1, 'jukebox': 1, 'just': 1, 'kiss': 1, 'know': 2, 'last': 3, 'lead': 6, 'leave': 1, 'let': 1, \"let's\": 2, 'like': 10, 'love': 25, 'lover': 1, 'magnet': 3, 'make': 1, 'man': 1, 'may': 2, 'me': 10, 'mind': 2, 'much': 2, 'my': 33, 'new': 6, 'night': 3, 'not': 2, 'now': 11, 'of': 6, 'okay': 1, 'on': 40, 'one': 1, 'our': 1, 'out': 1, 'over': 1, 'place': 1, 'plate': 1, 'play': 1, 'pull': 3, 'push': 3, 'put': 3, 'radio': 1, 'room': 3, 'say': 2, 'shape': 6, 'shots': 1, 'singing': 2, 'slow': 1, 'smell': 3, 'so': 2, 'somebody': 2, 'something': 6, 'sour': 1, 'start': 2, 'stop': 1, 'story': 1, 'sweet': 1, 'table': 1, 'take': 1, 'talk': 4, 'taxi': 1, 'tell': 1, 'that': 2, 'the': 18, 'then': 3, 'thrifty': 1, 'to': 2, 'too': 5, 'trust': 1, 'up': 3, 'van': 1, 'waist': 2, 'want': 2, 'was': 2, 'we': 7, \"we're\": 1, 'week': 1, 'were': 3, 'where': 1, 'with': 22, 'you': 16, 'your': 21}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "keys = list (sorted(word_freq.keys()))\n",
+    "\n",
+    "word_freq2 = {}\n",
+    "for i in keys:\n",
+    "    word_freq2.update({i: word_freq[i]})\n",
+    "\n",
+    "print(word_freq2)"
    ]
   },
   {
@@ -90,11 +104,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'conversation': 1, \"we're\": 1, 'plate': 1, 'sour': 1, 'jukebox': 1, 'taxi': 1, 'fast': 1, 'bag': 1, 'man': 1, 'going': 1, 'one': 1, 'backseat': 1, 'friends': 1, 'take': 1, 'play': 1, 'okay': 1, 'begin': 1, 'over': 1, 'just': 1, 'are': 1, 'tell': 1, 'drinking': 1, 'our': 1, 'where': 1, \"i'll\": 1, 'all': 1, \"isn't\": 1, 'make': 1, 'lover': 1, 'get': 1, 'radio': 1, 'give': 1, 'can': 1, 'club': 1, 'it': 1, 'out': 1, 'chance': 1, 'first': 1, 'table': 1, 'thrifty': 1, 'driver': 1, 'slow': 1, 'dance': 1, 'trust': 1, 'family': 1, 'week': 1, 'date': 1, 'leave': 1, 'at': 1, 'hand': 1, 'how': 1, 'eat': 1, 'about': 1, 'story': 1, 'sweet': 1, 'best': 1, 'let': 1, 'van': 1, 'shots': 1, 'place': 1, 'find': 1, 'kiss': 1, 'stop': 1, 'bar': 1, \"don't\": 2, 'mind': 2, 'know': 2, 'so': 2, 'start': 2, 'boy': 2, 'girl': 2, 'singing': 2, 'doing': 2, 'somebody': 2, 'handmade': 2, 'may': 2, 'that': 2, 'much': 2, 'grab': 2, 'was': 2, 'say': 2, 'waist': 2, 'want': 2, \"let's\": 2, 'not': 2, 'crazy': 2, 'go': 2, 'to': 2, 'fill': 2, 'hours': 2, 'push': 3, 'then': 3, 'put': 3, 'room': 3, 'magnet': 3, 'up': 3, 'pull': 3, 'last': 3, 'do': 3, 'smell': 3, 'although': 3, 'falling': 3, 'were': 3, 'night': 3, 'heart': 3, 'for': 3, 'bedsheets': 3, 'talk': 4, 'too': 5, 'is': 5, 'every': 6, 'new': 6, 'follow': 6, 'brand': 6, 'of': 6, 'i': 6, 'day': 6, 'lead': 6, 'shape': 6, 'discovering': 6, 'something': 6, 'we': 7, 'a': 8, 'like': 10, 'me': 10, 'now': 11, 'baby': 14, 'you': 16, 'be': 16, 'body': 17, 'the': 18, 'your': 21, 'with': 22, \"i'm\": 23, 'and': 23, 'love': 25, 'in': 27, 'my': 33, 'come': 37, 'on': 40}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "import operator\n",
+    "sorted_tups = sorted(word_freq.items(), key=operator.itemgetter(1))\n",
+    "\n",
+    "word_freq2 = {}\n",
+    "for i in range(len(sorted_tups)):\n",
+    "    word_freq2.update({sorted_tups[i][0]: sorted_tups[i][1]})\n",
+    "    \n",
+    "print(word_freq2)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -110,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,11 +167,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             word  freq\n",
+      "0               a    25\n",
+      "1           about     1\n",
+      "2             all     6\n",
+      "3        although     1\n",
+      "4             and     1\n",
+      "5             are     1\n",
+      "6              at     1\n",
+      "7            baby    11\n",
+      "8        backseat     1\n",
+      "9             bag     1\n",
+      "10            bar     1\n",
+      "11             be     1\n",
+      "12      bedsheets     3\n",
+      "13          begin    14\n",
+      "14           best     1\n",
+      "15           body    16\n",
+      "16            boy     2\n",
+      "17          brand     1\n",
+      "18            can     2\n",
+      "19         chance     1\n",
+      "20           club     1\n",
+      "21           come     3\n",
+      "22   conversation     2\n",
+      "23          crazy     1\n",
+      "24          dance     1\n",
+      "25           date     1\n",
+      "26            day     2\n",
+      "27    discovering     1\n",
+      "28             do     2\n",
+      "29          doing     1\n",
+      "..            ...   ...\n",
+      "110          sour     1\n",
+      "111         start     1\n",
+      "112          stop     1\n",
+      "113         story     2\n",
+      "114         sweet     1\n",
+      "115         table     5\n",
+      "116          take     1\n",
+      "117          talk     1\n",
+      "118          taxi     2\n",
+      "119          tell     2\n",
+      "120          that     8\n",
+      "121           the    33\n",
+      "122          then     5\n",
+      "123       thrifty     1\n",
+      "124            to     1\n",
+      "125           too     6\n",
+      "126         trust    40\n",
+      "127            up     1\n",
+      "128           van     3\n",
+      "129         waist     3\n",
+      "130          want     3\n",
+      "131           was     3\n",
+      "132            we     6\n",
+      "133         we're     6\n",
+      "134          week    16\n",
+      "135          were     3\n",
+      "136         where     2\n",
+      "137          with     2\n",
+      "138           you     1\n",
+      "139          your     1\n",
+      "\n",
+      "[140 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "myDict = word_freq\n",
+    "df = pd.DataFrame()\n",
+    "df['word'] = sorted(myDict.keys())\n",
+    "df['freq'] = myDict.values()\n",
+    "\n",
+    "print(df)"
    ]
   },
   {
@@ -150,11 +261,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             word  freq\n",
+      "0               a    25\n",
+      "1           about     1\n",
+      "2             all     6\n",
+      "3        although     1\n",
+      "4             and     1\n",
+      "5             are     1\n",
+      "6              at     1\n",
+      "7            baby    11\n",
+      "8        backseat     1\n",
+      "9             bag     1\n",
+      "10            bar     1\n",
+      "11             be     1\n",
+      "12      bedsheets     3\n",
+      "13          begin    14\n",
+      "14           best     1\n",
+      "15           body    16\n",
+      "16            boy     2\n",
+      "17          brand     1\n",
+      "18            can     2\n",
+      "19         chance     1\n",
+      "20           club     1\n",
+      "21           come     3\n",
+      "22   conversation     2\n",
+      "23          crazy     1\n",
+      "24          dance     1\n",
+      "25           date     1\n",
+      "26            day     2\n",
+      "27    discovering     1\n",
+      "28             do     2\n",
+      "29          doing     1\n",
+      "..            ...   ...\n",
+      "110          sour     1\n",
+      "111         start     1\n",
+      "112          stop     1\n",
+      "113         story     2\n",
+      "114         sweet     1\n",
+      "115         table     5\n",
+      "116          take     1\n",
+      "117          talk     1\n",
+      "118          taxi     2\n",
+      "119          tell     2\n",
+      "120          that     8\n",
+      "121           the    33\n",
+      "122          then     5\n",
+      "123       thrifty     1\n",
+      "124            to     1\n",
+      "125           too     6\n",
+      "126         trust    40\n",
+      "127            up     1\n",
+      "128           van     3\n",
+      "129         waist     3\n",
+      "130          want     3\n",
+      "131           was     3\n",
+      "132            we     6\n",
+      "133         we're     6\n",
+      "134          week    16\n",
+      "135          were     3\n",
+      "136         where     2\n",
+      "137          with     2\n",
+      "138           you     1\n",
+      "139          your     1\n",
+      "\n",
+      "[140 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "df['word'] = sorted(myDict.keys())\n",
+    "\n",
+    "print(df)"
    ]
   },
   {
@@ -166,12 +350,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             word  freq\n",
+      "0               a     1\n",
+      "1           about     1\n",
+      "2             all     1\n",
+      "3        although     1\n",
+      "4             and     1\n",
+      "5             are     1\n",
+      "6              at     1\n",
+      "7            baby     1\n",
+      "8        backseat     1\n",
+      "9             bag     1\n",
+      "10            bar     1\n",
+      "11             be     1\n",
+      "12      bedsheets     1\n",
+      "13          begin     1\n",
+      "14           best     1\n",
+      "15           body     1\n",
+      "16            boy     1\n",
+      "17          brand     1\n",
+      "18            can     1\n",
+      "19         chance     1\n",
+      "20           club     1\n",
+      "21           come     1\n",
+      "22   conversation     1\n",
+      "23          crazy     1\n",
+      "24          dance     1\n",
+      "25           date     1\n",
+      "26            day     1\n",
+      "27    discovering     1\n",
+      "28             do     1\n",
+      "29          doing     1\n",
+      "..            ...   ...\n",
+      "110          sour     6\n",
+      "111         start     6\n",
+      "112          stop     6\n",
+      "113         story     6\n",
+      "114         sweet     6\n",
+      "115         table     6\n",
+      "116          take     6\n",
+      "117          talk     6\n",
+      "118          taxi     6\n",
+      "119          tell     6\n",
+      "120          that     6\n",
+      "121           the     7\n",
+      "122          then     8\n",
+      "123       thrifty    10\n",
+      "124            to    10\n",
+      "125           too    11\n",
+      "126         trust    14\n",
+      "127            up    16\n",
+      "128           van    16\n",
+      "129         waist    17\n",
+      "130          want    18\n",
+      "131           was    21\n",
+      "132            we    22\n",
+      "133         we're    23\n",
+      "134          week    23\n",
+      "135          were    25\n",
+      "136         where    27\n",
+      "137          with    33\n",
+      "138           you    37\n",
+      "139          your    40\n",
+      "\n",
+      "[140 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['freq'] = sorted(myDict.values())\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
